--- a/templates/index.html
+++ b/templates/index.html
@@ -53,6 +53,7 @@
                 <h5>Notes</h5>
             </div>
         </div>
+        <div class="row" id="items"></div>
         <br>
         <br>
         <div class="row">
