working on appending table

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,8 +12,8 @@
     
     <script src="https://d3js.org/d3.v6.js"></script>
     <!-- Bring in our own stylesheet -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-    
+    <!-- <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}"> -->
+    <link rel="stylesheet" href="/static/css/style.css">
 </head>
 
 <body>
@@ -58,7 +58,7 @@
         <br>
         <div class="row">
             <div class="col-md-12">
-                <h2><a href="/form">Add an item here!</a></h2>
+                <!-- <h2><a href="/form">Add an item here!</a></h2> -->
             </div>
         </div>
     </div>
@@ -73,7 +73,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
     <!-- Our Javascript -->
-    <script src="{{ url_for('static', filename='js/app.js') }}"></script>
+    <!-- <script src="{{ url_for('static', filename='js/app.js') }}"></script> -->
+    <script src="/static/js/app.js"></script>
 </body>
 
 </html>
