finished table js

--- a/templates/index.html
+++ b/templates/index.html
@@ -53,12 +53,12 @@
                 <h5>Notes</h5>
             </div>
         </div>
-        <div class="row" id="items"></div>
+        <div class="underHeader"></div>
         <br>
         <br>
         <div class="row">
             <div class="col-md-12">
-                <!-- <h2><a href="/form">Add an item here!</a></h2> -->
+                <h2><a href="/form">Add an item here!</a></h2>
             </div>
         </div>
     </div>
