added remove buttons

--- a/templates/form.html
+++ b/templates/form.html
@@ -50,7 +50,7 @@
                             <label for="inputNotes">Additional Notes</label>
                             <input type="text" class="form-control" id="inputNotes" name="thriftNotes" placeholder="Notes">
                         </div>
-                        <input type="submit" value="submit" class="btn btn-default">
+                        <button type="submit" class="btn btn-primary">Submit</button>
                     </form>
                 </div>
             </div>
