--- a/templates/index.html
+++ b/templates/index.html
@@ -52,6 +52,9 @@
             <div class="col-md">
                 <h5>Notes</h5>
             </div>
+            <div class="col-md">
+                <h5>Item Purchased?</h5>
+            </div>
         </div>
         <div class="underHeader"></div>
         <br>
