working on error message for form

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,8 +1,4 @@
-.warning {
-    border: 2px solid #f39389;
-    border-radius: 2px;
-    padding: 10px;
-    position: absolute;
-    background-color: #fbd8d4;
-    color: #3b3c40;
+.error {
+    color: #dc0707;
+    font-weight: bold;
   }
