changing the way database is shown on index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -56,7 +56,36 @@
                 <h5>Item Purchased?</h5>
             </div>
         </div>
-        <div class="underHeader"></div>
+
+        <!-- {% for entry in database %}
+        <div class="row rowData">
+        <div class="col-md">
+            <p>{{ entry. }}</p>
+        </div>
+        <div class="col-md">
+            <p>{{ entry. }}</p>
+        </div>
+        <div class="col-md">
+            <p>{{ entry. }}</p>
+        </div>
+        <div class="col-md">
+            <p>{{ entry. }}</p>
+        </div>
+        <div class="col-md">
+            <p>{{ entry. }}</p>
+        </div>
+        <div class="col-md">
+            <p>{{ entry. }}</p>
+        </div>
+        <div class="col-md">
+            <p>{{ entry. }}</p>
+        </div>
+        <div class="col-md">
+            <button type='button' class='btn btn-primary btn-sm' id= 'id' {{ entry. }}>Remove</button>
+        </div>
+        </div>
+        {% endfor %} -->
+    
         <br>
         <br>
         <div class="row">
