--- a/templates/form.html
+++ b/templates/form.html
@@ -21,7 +21,7 @@
             </div>
             <div class="row">
                 <div class="col-md-offset-2 col-md-8">
-                    <form onsubmit="event.preventDefault(); validateMyForm();" method="POST" action="/send" role="form", name="thriftform">
+                    <form onsubmit="validateMyForm()" method="POST" action="/send" role="form", name="thriftform">
                         <div class="form-group">
                             <label for="inputItem">Clothes Item</label>
                             <input type="text" class="form-control" id="inputItem" name="thriftItem" placeholder="Item">
