working on MIME error

--- a/templates/form.html
+++ b/templates/form.html
@@ -11,8 +11,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     
     <!-- Bring in our own stylesheet -->
-    <!-- <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}"> -->
-    <link rel="stylesheet" href="/static/css/style.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <!-- <link rel="stylesheet" href="/static/css/style.css"> -->
     <body>
         <div class="container">
             <div class="jumbotron" style="text-align: center">
@@ -70,8 +70,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     
     <!-- Our Javascript -->
-    <!-- <script src="{{ url_for('static', filename='js/form.js') }}"></script> -->
-    <script src="/static/js/form.js"></script>
+    <script src="{{ url_for('static', filename='js/form.js') }}"></script>
+    <!-- <script src="/static/js/form.js"></script> -->
     </body>
 
 </html>
