--- a/templates/index.html
+++ b/templates/index.html
@@ -14,6 +14,7 @@
     <!-- Bring in our own stylesheet -->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <!-- <link rel="stylesheet" href="/static/css/style.css"> -->
+    <link rel="shortcut icon" href="#">
 </head>
 
 <body>
@@ -56,44 +57,45 @@
                 <h5>Item Purchased?</h5>
             </div>
         </div>
-
-        <!-- {% for entry in database %}
-        <div class="row rowData">
-        <div class="col-md">
-            <p>{{ entry. }}</p>
-        </div>
-        <div class="col-md">
-            <p>{{ entry. }}</p>
-        </div>
-        <div class="col-md">
-            <p>{{ entry. }}</p>
-        </div>
-        <div class="col-md">
-            <p>{{ entry. }}</p>
-        </div>
-        <div class="col-md">
-            <p>{{ entry. }}</p>
-        </div>
-        <div class="col-md">
-            <p>{{ entry. }}</p>
-        </div>
-        <div class="col-md">
-            <p>{{ entry. }}</p>
-        </div>
-        <div class="col-md">
-            <button type='button' class='btn btn-primary btn-sm' id= 'id' {{ entry. }}>Remove</button>
-        </div>
-        </div>
-        {% endfor %} -->
-    
+        {% for item in database %}
+            <div class="row rowData">
+            <div class="col-md">
+                <p>{{ item.item }}</p>
+            </div>
+            <div class="col-md">
+                <p>{{ item.size }}</p>
+            </div>
+            <div class="col-md">
+                <p>{{ item.name }}</p>
+            </div>
+            <div class="col-md">
+                <p>{{ item.color }}</p>
+            </div>
+            <div class="col-md">
+                <p>{{ item.maxprice }}</p>
+            </div>
+            <div class="col-md">
+                <p>{{ item.condition }}</p>
+            </div>
+            <div class="col-md">
+                <p>{{ item.notes }}</p>
+            </div>
+            <div class="col-md">
+                <button type='button' class='btn btn-primary btn-sm delbtn' id= 'id{{ item.id }}'>Remove</button>
+            </div>
+            </div>
+        {% endfor %}
         <br>
         <br>
         <div class="row">
             <div class="col-md-12">
-                <h2><a href="/form">Add an item here!</a></h2>
+                <a href="/form" class="btn btn-primary btn-lg" role="button">Add an item</a>
             </div>
         </div>
     </div>
+    <video id="video" poster="/media/poster.png" autoplay muted loop>
+        <source src="/media/video.mp4" type="video/mp4">
+    </video>
 
         
     <!-- D3 -->
