--- a/templates/index.html
+++ b/templates/index.html
@@ -93,8 +93,8 @@
             </div>
         </div>
     </div>
-    <video id="video" poster="/media/poster.png" autoplay muted loop>
-        <source src="/media/video.mp4" type="video/mp4">
+    <video id="video" poster="/static/media/poster.png" autoplay muted loop>
+        <source src="/static/media/video.mp4" type="video/mp4">
     </video>
 
         
