--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13,32 +13,25 @@ label {
 input:required:invalid {
   border-color: #c00000;
 }
-#video{
-  object-fit: cover;
-  width: 100vw;
-  height: 100vh;
-  position: fixed;
-  top: 0;
-  left: 0;
+
+.container{
+  width:100%;
+  padding: 40px;
+  margin: 100px auto;
+  font-family:'Courier New', Courier, monospace
 }
-@media (min-aspect-ratio: 16/9){
-  #video{
-    width:100%;
-    height: auto;
-  }
+.jumbotron{
+  font-weight: bold;
 }
-@media (max-aspect-ratio: 16/9){
-  #video{
-    width:auto;
-    height: 100%;
-  }
+.grid-list{
+  background-color: paleturquoise;
 }
-@media (max-width: 767px){
-  #video{
-    display: none;
-  }
-  body{
-    background: url("/static/media/poster.png");
-    background-size: cover;
-  }
+
+body{
+  background-image: url("/static/media/Flowers.png");
+  background-size: cover;
+  /*background-attachment: fixed;*/
 }
+/* body{
+  background-color: paleturquoise;
+} */
