--- a/templates/index.html
+++ b/templates/index.html
@@ -23,79 +23,81 @@
             <h1>Thrift Store Finds</h1>
             <p>See list below for items to search for at your thrift store of choice to help your family and friends with the hunt.</p>
         </div>
-
-        <div class="row">
-            <div class="col-md-12">
-                <h2>Current list of items</h2>
-                <br>
+        <div class="grid-list">
+            <div class="row">
+                <div class="col-md-12">
+                    <h2>Current list of items</h2>
+                    <br>
+                </div>
             </div>
+            
+            <div class="row">
+                <div class="col-md">
+                    <h5>Item</h5>
+                </div>
+                <div class="col-md">
+                    <h5>Size</h5>
+                </div>
+                <div class="col-md">
+                    <h5>Name</h5>
+                </div>
+                <div class="col-md">
+                    <h5>Color</h5>
+                </div>
+                <div class="col-md">
+                    <h5>Max Price</h5>
+                </div>
+                <div class="col-md">
+                    <h5>Condition</h5>
+                </div>
+                <div class="col-md">
+                    <h5>Notes</h5>
+                </div>
+                <div class="col-md">
+                    <h5>Item Purchased?</h5>
+                </div>
+            </div>
+            {% for item in database %}
+                <div class="row rowData">
+                <div class="col-md">
+                    <p>{{ item.item }}</p>
+                </div>
+                <div class="col-md">
+                    <p>{{ item.size }}</p>
+                </div>
+                <div class="col-md">
+                    <p>{{ item.name }}</p>
+                </div>
+                <div class="col-md">
+                    <p>{{ item.color }}</p>
+                </div>
+                <div class="col-md">
+                    <p>{{ item.maxprice }}</p>
+                </div>
+                <div class="col-md">
+                    <p>{{ item.condition }}</p>
+                </div>
+                <div class="col-md">
+                    <p>{{ item.notes }}</p>
+                </div>
+                <div class="col-md">
+                    <button type='button' class='btn btn-primary btn-sm delbtn' id= 'id{{ item.id }}'>Remove</button>
+                </div>
+                </div>
+            {% endfor %}
         </div>
+            <br>
+            <br>
+            <div class="row">
+                <div class="col-md-12">
+                    <a href="/form" class="btn btn-primary btn-lg" role="button">Add an item</a>
+                </div>
+            </div>
+            <br>
+            <br>
         
-        <div class="row">
-            <div class="col-md">
-                <h5>Item</h5>
-            </div>
-            <div class="col-md">
-                <h5>Size</h5>
-            </div>
-            <div class="col-md">
-                <h5>Name</h5>
-            </div>
-            <div class="col-md">
-                <h5>Color</h5>
-            </div>
-            <div class="col-md">
-                <h5>Max Price</h5>
-            </div>
-            <div class="col-md">
-                <h5>Condition</h5>
-            </div>
-            <div class="col-md">
-                <h5>Notes</h5>
-            </div>
-            <div class="col-md">
-                <h5>Item Purchased?</h5>
-            </div>
-        </div>
-        {% for item in database %}
-            <div class="row rowData">
-            <div class="col-md">
-                <p>{{ item.item }}</p>
-            </div>
-            <div class="col-md">
-                <p>{{ item.size }}</p>
-            </div>
-            <div class="col-md">
-                <p>{{ item.name }}</p>
-            </div>
-            <div class="col-md">
-                <p>{{ item.color }}</p>
-            </div>
-            <div class="col-md">
-                <p>{{ item.maxprice }}</p>
-            </div>
-            <div class="col-md">
-                <p>{{ item.condition }}</p>
-            </div>
-            <div class="col-md">
-                <p>{{ item.notes }}</p>
-            </div>
-            <div class="col-md">
-                <button type='button' class='btn btn-primary btn-sm delbtn' id= 'id{{ item.id }}'>Remove</button>
-            </div>
-            </div>
-        {% endfor %}
-        <br>
-        <br>
-        <div class="row">
-            <div class="col-md-12">
-                <a href="/form" class="btn btn-primary btn-lg" role="button">Add an item</a>
-            </div>
-        </div>
     </div>
-    <video id="video" poster="/static/media/poster.png" autoplay muted loop>
-        <source src="/static/media/video.mp4" type="video/mp4">
-    </video>
+
 
         
     <!-- D3 -->
