--- a/templates/form.html
+++ b/templates/form.html
@@ -20,7 +20,8 @@
                 <h1>Thrift Store Finds</h1>
                 <p>Enter the clothes item below!</p>
             </div>
-            <div class="row">
+
+            <div class="row formbackground">
                 <div class="col-md-offset-2 col-md-8">
                     <form method="POST" action="/send" role="form", name="thriftform">
                         <div class="form-group">
