added media query for phone

--- a/templates/index.html
+++ b/templates/index.html
@@ -25,49 +25,49 @@
         </div>
         <div class="grid-list">
             <div class="row">
-                <div class="col-md-12">
+                <div class="col-sm-12">
                     <h2>Current list of items</h2>
                     <br>
                 </div>
             </div>
             
             <div class="row">
-                <div class="col-md-2">
+                <div class="col-sm-2">
                     <div class=contents>
                         <h5>Item</h5>
                     </div>
                 </div>
-                <div class="col-md-1">
+                <div class="col-sm-1">
                     <div class=contents>
                         <h5>Size</h5>
                     </div>
                 </div>
-                <div class="col-md-1">
+                <div class="col-sm-1">
                     <div class=contents>
                         <h5>Name</h5>
                     </div>
                 </div>
-                <div class="col-md-1">
+                <div class="col-sm-1">
                     <div class=contents>
                         <h5>Color</h5>
                     </div>
                 </div>
-                <div class="col-md-1">
+                <div class="col-sm-1">
                     <div class=contents>
                         <h5>Max Price</h5>
                     </div>
                 </div>
-                <div class="col-md-2">
+                <div class="col-sm-2">
                     <div class=contents>
                         <h5>Condition</h5>
                     </div>
                 </div>
-                <div class="col-md-2">
+                <div class="col-sm-2">
                     <div class=contents>
                         <h5>Notes</h5>
                     </div>
                 </div>
-                <div class="col-md-2">
+                <div class="col-sm-2">
                     <div class=contents>
                         <h5>Item Purchased?</h5>
                     </div>
@@ -75,42 +75,42 @@
             </div>
             {% for item in database %}
                 <div class="row rowData">
-                <div class="col-md-2">
+                <div class="col-sm-2">
                     <div class=contents>
                         <p>{{ item.item }}</p>
                     </div>
                 </div>
-                <div class="col-md-1">
+                <div class="col-sm-1">
                     <div class=contents>
                         <p>{{ item.size }}</p>
                     </div>
                 </div>
-                <div class="col-md-1">
+                <div class="col-sm-1">
                     <div class=contents>
                         <p>{{ item.name }}</p>
                     </div>
                 </div>
-                <div class="col-md-1">
+                <div class="col-sm-1">
                     <div class=contents>
                         <p>{{ item.color }}</p>
                     </div>
                 </div>
-                <div class="col-md-1">
+                <div class="col-sm-1">
                     <div class=contents>
                         <p>{{ item.maxprice }}</p>
                     </div>
                 </div>
-                <div class="col-md-2">
+                <div class="col-sm-2">
                     <div class=contents>
                         <p>{{ item.condition }}</p>
                     </div>
                 </div>
-                <div class="col-md-2">
+                <div class="col-sm-2">
                     <div class=contents>
                         <p>{{ item.notes }}</p>
                     </div>
                 </div>
-                <div class="col-md-2">
+                <div class="col-sm-2">
                     <div class=contents>
                         <button type='button' class='btn btn-primary btn-sm delbtn' id= 'id{{ item.id }}'>Remove</button>
                     </div>
@@ -121,7 +121,7 @@
             <br>
             <br>
             <div class="row">
-                <div class="col-md-12">
+                <div class="col-sm-12">
                     <a href="/form" class="btn btn-primary btn-lg" role="button">Add an item</a>
                 </div>
             </div>
