--- a/static/css/style.css
+++ b/static/css/style.css
@@ -18,7 +18,7 @@ input:required:invalid {
   width:100%;
   padding: 40px;
   margin: 100px auto;
-  font-family:'Courier New', Courier, monospace
+  font-family:'Courier New', Courier, monospace;
 }
 .jumbotron{
   font-weight: bold;
@@ -36,7 +36,22 @@ body{
   background-size: 100% auto;
   /*background-attachment: fixed;*/
 }
-.col-md-2, .col-md-1{
+.col-sm-2, .col-sm-1{
   border: #5a5a5a thin solid;
 
 }
+/* for phones */
+@media only screen and (max-width: 768px){
+  .container{
+    width:100%;
+    padding: 5px;
+    margin: 50px auto;
+    font-family:'Courier New', Courier, monospace;
+  }
+  h5{
+    font-size: small;
+  }
+  p{
+    font-size: x-small;
+  }
+  }
