--- a/static/css/style.css
+++ b/static/css/style.css
@@ -36,7 +36,7 @@ body{
   background-size: 100% auto;
   /*background-attachment: fixed;*/
 }
-.col-xs-2, .col-xs-1{
+.col-sm-2, .col-sm-1{
   border: #5a5a5a thin solid;
 
 }
@@ -58,7 +58,7 @@ body{
   /* for phones */
 @media only screen and (max-width: 576px){
   h5{
-    font-size: x-small;
+    font-size: xx-small;
   }
   p{
     font-size: xx-small;
